[package]
name = "crabwire"
version = "0.1.3"
edition = "2024"
description = "A tiny global dependency registry for Rust"
readme = "../README.md"
homepage = "https://github.com/vmenge/crabwire"
repository = "https://github.com/vmenge/crabwire"
license = "MIT"

[features]
default = []
testing = []

[dependencies]
crabwire_macros = "0.1.1"
foldhash = "0.2"
