[package]
name = "crabwire"
version = "0.1.5"
edition = "2024"
description = "A tiny global dependency registry for Rust"
readme = "../README.md"
homepage = "https://github.com/vmenge/crabwire"
repository = "https://github.com/vmenge/crabwire"
license = "MIT"

[dependencies]
crabwire_macros = { version = "0.1.2" }
foldhash = "0.2"

[features]
default = []
testing = []
