[package]
name = "crabwire_macros"
version = "0.1.2"
edition = "2024"
description = "Proc macros for crabwire"
readme = "../README.md"
license = "MIT"
homepage = "https://github.com/vmenge/crabwire"
repository = "https://github.com/vmenge/crabwire"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
proc-macro-crate = "3"
quote = "1"
syn = { version = "2", features = ["full", "parsing"] }
